src/styles.css
/**
* CSS file to hold styles that apply across the application
*/

@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400&family=Montserrat:wght@200;400;600;800&display=swap");

html,
body {
  font-family: "Poppins", sans-serif;
  height: 100%;
  margin: 0;
  padding: 0;
  width: 100%;
}

body {
  overflow-x: hidden;
}

html {
  scroll-behavior: smooth!important;
}

div#main {
  display: flex;
  flex-direction: column;
  width: 100vw;
}

section {
  position: relative;
  width: 100vw;
}

section.min-height {
  min-height: 100vh;
}

section.padding {
  padding: 5rem 0;
}

section img.background {
  height: 100%;
  left: 50%;
  object-fit: cover;
  pointer-events: none;
  position: absolute;
  top: 0;
  transform: translate(-50%, 0);
  width: 100vmax;
  z-index: -1;
}

h1 {
  font-family: "Open Sans", sans-serif;
  font-size: 4.5rem;
  font-weight: 600;
  line-height: 0.8;
  margin: 0;
  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.15);
}

h2 {
  font-size: 2.5rem;
  font-weight: 500;
  margin: 0;
  padding-top: 1rem;
  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
}

h3 {
  font-weight: 400;
  font-size: 1.25rem;
  margin: 0;
}

p {
  font-size: 18px;
  line-height: 1.5;
  margin-top: 0rem;
  margin-bottom: 0.8rem;
  font-weight: 300;
}

p.large {
  font-size: 24px;
}

p.small {
  font-size: 15px;
}

hr {
  margin: 2.5rem;
}

li {
  line-height: 1.7;
}

li::marker {
  color: #4e567e;
}

a {
  color: black;
  text-decoration: none;
}

a:hover {
  color: #4e567e;
}

.container {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: 330px 300px;
  margin: 20px auto;
}

.container .box {
  border-radius: 10px;
  border: 1px solid rgb(204, 204, 204);
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding: 24px 16px;
  text-align: center;
}

img.socialIcon {
  height: 30px;
  width: 30px;
}

@keyframes slideInLeft {
  0% {
    transform: translateX(-100%);
  }
  100% {
    transform: translateX(0);
  }
}

